# helical-jupyter

./: .gitignore  EchoCellMagic.py  EchoPackage_README  EchoPackage_README.md  README.md  Saved-StateREADME.md  Untitled.ipynb  compare_images.py  echo.py  graph_20241011_124853  graph_20241011_125206  graph_20241011_125434  log.txt  pyproject.toml
.github/workflows/: python-app.yml
EchoPackage/: pyproject.toml  setup.py
EchoPackage/echo_append/: __init__.py  echo_append.py
Logs/: 15July2024_AddingSavedState.md  16July2024_pyprojecttoml.md  24July2024_BugInecho_append.md  25July2024_BugFixecho_append.md
Notebooks/: Untitled.ipynb
Playground/: README.md  image.py  output_graph
Resources/: invalid.dot  valid.dot
echo_append/: echo_append.py
