[tool.poetry]
name = "EchoPackage"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "echo_append"}
]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
