[tool.poetry]
name = "EchoPackage"
version = "0.1.0"
description = ""
authors = ["Kevin Yang <your.email@example.com>"]
packages = [
    { include = "echo_append"}
]

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^7.0"
graphviz = "^0.20"
pillow = "^10.4.0" 
jupyter = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
